<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>debbie-boot</artifactId>
        <groupId>com.truthbean</groupId>
        <version>0.5.5-RELEASE</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>debbie-kafka</artifactId>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.truthbean</groupId>
            <artifactId>debbie-core</artifactId>
            <version>${truthbean.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.truthbean</groupId>
            <artifactId>stdout-boot</artifactId>
            <version>${truthbean.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.truthbean</groupId>
            <artifactId>debbie-jackson</artifactId>
            <version>${truthbean.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.truthbean</groupId>
            <artifactId>debbie-test</artifactId>
            <version>${truthbean.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
